openshift/pod-mysql-nopv.yaml
apiVersion: v1
kind: Pod
metadata:
  name: phabricator-mysql
  labels: 
    name: phabricator-mysql
spec: 
  containers: 
    - image: 172.30.117.244:5000/ceyes-ci/phabricator-mysql:latest
      name: phabricator-mysql
      ports: 
        - containerPort: 3306
          protocol: TCP
