openshift/pod-phabricator.yaml
apiVersion: v1
kind: Pod
metadata:
  name: phabricator
  labels: 
    name: phabricator
spec: 
  containers: 
    - image: 172.30.117.244:5000/ceyes-ci/phabricator:latest
      name: phabricator
      ports: 
        - containerPort: 8080
          protocol: TCP
      volumeMounts:
        - name: phabricator-conf-persistent-storage
          mountPath: /opt/phabricator/conf/local/
        - name: phabricator-repo-persistent-storage
          mountPath: /var/repo/
  volumes:
    - name: phabricator-conf-persistent-storage
      persistentVolumeClaim:
        claimName: claim-phabricator-conf
    - name: phabricator-repo-persistent-storage
      persistentVolumeClaim:
        claimName: claim-phabricator-repo
