openshift/service-phabricator-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: phabricator-mysql
  name: phabricator-mysql
  namespace: ceyes-ci
spec:
  ports:
  - name: 3306-tcp
    port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    name: phabricator-mysql
  sessionAffinity: None
  type: ClusterIP
