openshift/service-phabricator.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: phabricator
  name: phabricator
  namespace: ceyes-ci
spec:
  ports:
  - name: 8081-tcp
    port: 8081
    protocol: TCP
    targetPort: 8080
  selector:
    name: phabricator
  sessionAffinity: None
  type: ClusterIP
