openshift/route-phabricator.yaml
apiVersion: v1
kind: Route
metadata:
  name: phabricator
  namespace: ceyes-ci
spec:
  host: code.ceyes.os
  to:
    kind: Service
    name: phabricator
status: {}
